# convolution-benchmarks

./: .clang-format  .gitignore  CMakeLists.txt  COMMANDS.md  LICENSE  README.md  convolution-benchmarks.code-workspace  getting-started-with-simd.code-workspace  package-lock.cmake  renovate.json  run-benchmarks.bat  run-benchmarks.sh
.github/workflows/: continuous-integration.yml
chart/: BenchmarkChart.json  BenchmarkChart.md  BenchmarkChartHorizontal.json  BenchmarkChartKernelSize1024.json  BenchmarkChartKernelSize16.json  BenchmarkCharts.md  COMMANDS.md  LICENSE  README.md  package-lock.json  package.json
chart/AppleClang-MacOSX-x86_64AVX/: benchmark-report.json
chart/AppleClang-macOS-arm64/: BenchmarkChartHorizontal.json  benchmark-report.json  benchmark-report.xml
chart/AppleClang-macOS-x86_64AVX/: benchmark-report.json  benchmark-report.xml
chart/AppleClang-macOS-x86_64AVX2/: benchmark-report.json  benchmark-report.xml
chart/GNU-Linux-x86_64AVX/: benchmark-report.json  benchmark-report.xml
chart/GNU-Linux-x86_64AVX2/: benchmark-report.json  benchmark-report.xml
chart/GNU-Linux-x86_64AVX512/: benchmark-report.json  benchmark-report.xml
chart/GNU-Linux-x86_64SSE2/: benchmark-report.json  benchmark-report.xml
chart/GNU-Windows-AMD64AVX/: benchmark-report.json  benchmark-report.xml
chart/GNU-Windows-AMD64AVX2/: benchmark-report.json  benchmark-report.xml
chart/GNU-Windows-AMD64AVX512/: benchmark-report.json  benchmark-report.xml
chart/MSVC-Windows-AMD64AVX/: benchmark-report.json  benchmark-report.xml
chart/MSVC-Windows-AMD64AVX2/: benchmark-report.json  benchmark-report.xml
chart/MSVC-Windows-AMD64AVX512/: benchmark-report.json  benchmark-report.xml
chart/MSVC-Windows-AMD64SSE2/: benchmark-report.json
chart/data/: benchmark-report-AppleClang-macOS-arm64.json  benchmark-report-MSVC-Windows-AMD64AVX2.json
cmake/: BenchmarkChartEnvironmentFileSetup.cmake  CompilerOptions.cmake  Environment.cmake  HostSystemInfo.cmake  findAVX.cmake  find_avx.cmake
script/: benchmark-with-charts.bat  benchmark-with-charts.sh  build.bat  build.sh  create-charts.bat  create-charts.sh  run-all.bat  run-all.sh  run-benchmarks.bat  run-benchmarks.sh
source/: Chaowang15Convolution.h  Din0sConvolution.h  FIRFilter.cpp  FIRFilter.h  JohTConvolution.h  Main.cpp  MatlabLikeConvolution.h  SongHoAhnConvolution.h  TestVectors.h  WilczekConvolution.cpp  WilczekConvolution.h
test/: BenchmarkTest.cpp  CMakeLists.txt  Chaowang15ConvolutionTest.cpp  ConvolutionAlgorithmBenchmarkTest.cpp  ConvolutionAlgorithmUnitTest.cpp  JohtConvolutionTest.cpp  MatlabLikeTest.cpp  OptionalTestDataPrintTest.cpp  RandomVectorGenerator.h  TestVectors.h  WilzekAvxDefaultAlignmentConvolutionTest.cpp  WilzekConvolutionTest.cpp
